fix for search button miss align

--- a/css/styles.css
+++ b/css/styles.css
@@ -619,6 +619,10 @@ footer{
   border-bottom-right-radius: 5px;
 }
 
+.search-btn{
+  min-height: 100%;
+}
+
 .signup-submit{
   padding: 14px;
 }
@@ -753,6 +757,11 @@ border-right: 3px solid var(--light-brown);
 border-left: 3px solid var(--dark-brown);
 border-bottom: 3px solid var(--light-brown);
 border-radius: 5px;
+}
+
+.search-input{
+  border: 3px solid var(--dark-brown);
+  height: 50px;
 }
 
 #contact-form textarea{
